--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-typescript": "^7.24.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^8.4.0",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5"
